--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -7,6 +7,7 @@
         "moduleResolution": "node",
         "lib": ["es2022"],
         "declaration": true,
-        "declarationDir": "dist"
+        "declarationDir": "dist",
+        "downlevelIteration": true
     }
 }
